--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^10.0.0",
     "lottie-ios": "^3.5.0",
     "lottie-react-native": "^5.1.6",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-google-button": "^0.7.2",
     "react-native": "0.71.8",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.5.0",
